--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-﻿tweepy==4.14.0
-python-dotenv==1.0.0
-openai==0.28
-feedparser==6.0.10
+﻿tweepy==4.15.0
+python-dotenv==1.0.1
+openai>=1.0.0
+feedparser==6.0.11
 newspaper3k==0.2.8
-schedule==1.2.0
-requests==2.31.0
+schedule==1.2.2
+requests==2.32.3
 supabase
-python-dateutil==2.8.2
+python-dateutil==2.9.0.post0
 asyncio==3.4.3
 httpx>=0.23.0,<1.0.0
